Prevent Hover on Mobile Devices

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -116,7 +116,17 @@ hr {
   display: block;
 }
 
+.hidden{
+
+}
 
 #startButton{
   margin: 32px;
+}
+
+
+@media (hover:none){
+  .memoryCard:hover {
+    background-color: #FF5959;
+  }
 }
